# red_channel_extract

./: Auth.cpp  CMakeLists.txt  Menu.cpp  VideoProcessor.cpp  main.cpp
include/: Auth.hpp  Menu.hpp  VideoProcessor.hpp
src/: Auth.cpp  Menu.cpp  VideoProcessor.cpp
